--- a/src/gui/chords/ChordsPanel.ui
+++ b/src/gui/chords/ChordsPanel.ui
@@ -53,6 +53,44 @@
     </spacer>
    </item>
    <item>
+    <widget class="QPushButton" name="buttonSendToChat">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>send the chords to chat...</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>send the chords to chat</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="buttonDiscardChords">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>discard chord progression</string>
+     </property>
+     <property name="accessibleDescription">
+      <string>discard chord progression</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="buttonTransposeUp">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
@@ -61,6 +99,9 @@
       </sizepolicy>
      </property>
      <property name="toolTip">
+      <string>transpose up</string>
+     </property>
+     <property name="accessibleDescription">
       <string>transpose up</string>
      </property>
      <property name="text">
@@ -79,24 +120,11 @@
      <property name="toolTip">
       <string>transpose down</string>
      </property>
+     <property name="accessibleDescription">
+      <string>transpose down</string>
+     </property>
      <property name="text">
       <string>b</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="buttonSendToChat">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="toolTip">
-      <string>send the chords to chat...</string>
-     </property>
-     <property name="text">
-      <string/>
      </property>
     </widget>
    </item>
