--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -1254,14 +1254,18 @@ ChatMessagePanel QPushButton:hover#translateButton{
 
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
-ChordsPanel #buttonSendToChat{
-    background-image: url(':/images/chat_small.png');
+ChordsPanel #buttonSendToChat, ChordsPanel #buttonDiscardChords{
     background-repeat: no-repeat;
     background-position: center;
     max-width: 18px;
     width: 18px;
     padding: 2px;
-
+}
+ChordsPanel #buttonSendToChat{
+    background-image: url(':/images/chat_small.png');
+}
+ChordsPanel #buttonDiscardChords{
+    background-image: url(':/images/discard.png');
 }
 
 ChordLabel{
