--- a/src/gui/BaseTrackView.ui
+++ b/src/gui/BaseTrackView.ui
@@ -88,6 +88,9 @@
              <verstretch>1</verstretch>
             </sizepolicy>
            </property>
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="accessibleDescription">
             <string>This is the volume slider, Moove up to increase the volume or down to decrease it </string>
            </property>
@@ -203,6 +206,9 @@
             </item>
             <item row="0" column="1" rowspan="2" colspan="2" alignment="Qt::AlignHCenter">
              <widget class="QDial" name="panSlider">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
               <property name="accessibleDescription">
                <string>This is the Pan knob</string>
               </property>
@@ -330,6 +336,9 @@
            <property name="enabled">
             <bool>true</bool>
            </property>
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="toolTip">
             <string>mute</string>
            </property>
@@ -355,6 +364,9 @@
          </item>
          <item>
           <widget class="QPushButton" name="soloButton">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="toolTip">
             <string>solo</string>
            </property>
@@ -398,6 +410,9 @@
             </property>
             <item>
              <widget class="QPushButton" name="buttonBoostPlus12">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
               <property name="toolTip">
                <string>+12 db boost</string>
               </property>
@@ -414,6 +429,9 @@
             </item>
             <item>
              <widget class="QPushButton" name="buttonBoostZero">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
               <property name="toolTip">
                <string>no boost</string>
               </property>
@@ -430,6 +448,9 @@
             </item>
             <item>
              <widget class="QPushButton" name="buttonBoostMinus12">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
               <property name="toolTip">
                <string>-12 db boost</string>
               </property>
